@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.5 2004/06/20 02:02:58 xtraeme Exp $
+# $NetBSD: Makefile,v 1.6 2004/06/20 02:36:24 xtraeme Exp $
 
 DISTNAME=	ffmpeg-0.4.8
+PKGREVISION=	1
 CATEGORIES=	multimedia net
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=ffmpeg/}
 
@@ -12,6 +13,11 @@ HAS_CONFIGURE=	YES
 USE_BUILDLINK3=	YES
 USE_GNU_TOOLS+=	make
 USE_LIBTOOL=	YES
+USE_PKGINSTALL=	YES
+
+CONF_FILES=	${PREFIX}/share/examples/ffmpeg/ffserver.conf \
+		${PKG_SYSCONFDIR}/ffserver.conf
+
 MAKE_ENV+=	EXTRA_LIBS="${LIBGETOPT}" \
 		FFSERVER_CONF=${PKG_SYSCONFDIR}/ffserver.conf \
 		LOCALBASE="${LOCALBASE}"
@@ -32,8 +38,9 @@ CONFIGURE_ARGS+=	--disable-mmx
 .endif
 
 post-install:
-	${INSTALL_DATA_DIR} ${PREFIX}/share/doc/ffmpeg \
-		${PREFIX}/share/examples/ffmpeg
+	${INSTALL_DATA_DIR} ${PREFIX}/share/examples/ffmpeg \
+		${PREFIX}/share/doc/ffmpeg \
+		${PREFIX}/include/ffmpeg/libpostproc
 	${INSTALL_DATA} ${WRKSRC}/libavcodec/apiexample.c \
 		${PREFIX}/share/doc/ffmpeg
 	${INSTALL_DATA} ${WRKSRC}/README ${WRKSRC}/doc/TODO \
@@ -44,6 +51,8 @@ post-install:
 		${PREFIX}/share/examples/ffmpeg
 	# ffplay not installed
 	${RM} ${PREFIX}/man/man1/ffplay.1
+	${INSTALL_DATA} ${WRKSRC}/libavcodec/libpostproc/postprocess.h \
+		${PREFIX}/include/ffmpeg/libpostproc
 
 .include "../../devel/libgetopt/buildlink3.mk"
 .include "../../mk/ossaudio.buildlink3.mk"
